--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -2,6 +2,22 @@
   "APP_NAME": "Midas - En",
   "Client_Component": {
     "ClientStepper": {
+      "AddressStep": {
+        "buttonAdd": "Add new address",
+        "titleAddress": "Address",
+        "labelAddressLine1": "Address Number",
+        "labelAddressLine2": "Block Number",
+        "labelAddressLine3": "Residential/ Apartment Name",
+        "labelCity": "City",
+        "labelCountry": "Country",
+        "checkboxIsActive": "Activate ?",
+        "labelPostalCode": "Postal Code",
+        "labelStateProvince": "State/Province",
+        "labelStreet": "Street",
+        "labelAddressType": "Address Type",
+        "labelDistrict": "District",
+        "labelTownVillage": "Town/Vilage"
+      },
       "labelGeneral": "General",
       "labelAddress": "Address",
       "labelRelative": "Relative",
