--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -378,5 +378,41 @@
       "btnCancel": "Cancel",
       "btnAdd": "Add"
     }
+  },
+  "Group_Component": {
+    "placeholderSearchByName":"Search by Name",
+    "labelShowClosedGroups":"Show Closed Groups",
+    "btnBulkImport":"Import Group",
+    "btnCreate":"Create Group",
+    "tableColName":"Name",
+    "tableColAccountNo":"Account #",
+    "tableColExternalId":"ExternalID",
+    "tableColStatus":"Status",
+    "tableColOfficeName":"Office Name",
+    "Create_Group_Component":{
+      "labelName":"name",
+      "labelGroupNameMsgRequired":"Group Name is <strong>required</strong>",
+      "labelGroupNameMsgPattern":"Group Name <strong>cannot</strong> begin with a special character or number",
+      "labelOffice":"Office",
+      "labelGroupOfficeMsgRequired":"Office is <strong>required</strong>",
+      "labelStaff":"Staff",
+      "labelType":"Group Type",
+      "CheckboxActive":"Active",
+      "tableColCartType":"Card Type",
+      "tableColFeeWithDraw":"Fee WithDraw",
+      "tableColFeeRollTerm":"Fee RollTerm",
+      "labelActivationDate":"Activation Date",
+      "labelGroupActivationDateMsgRequired":"Activation Date is <strong>required</strong>",
+      "labelExternal":"External Id",
+      "labelSubmittedOn":"Submitted On",
+      "labelGroupSubmittedOnMsgRequired":"Submission Date is <strong>required</strong>",
+      "labelAddClients":"Add Clients",
+      "tableColName":"Name",
+      "tableColId":"Id",
+      "tableColOfficeName":"Office Name",
+      "labelSelectedClients":"Selected Clients",
+      "btnCancel":"Cancel",
+      "btnSubmit":"Submit"
+    }
   }
 }
