--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -273,7 +273,10 @@
     "btnDashboard": "Dashboard",
     "labelIncompleteRollterm": "Incomplete Refinance Card",
     "btnNewCustomer": "New Client",
-    "btnNewGroup": "New Group"
+    "btnNewGroup": "New Group",
+    "lblOnDueCard": "On Due Date within next 15 days",
+    "lblCards": "Cards",
+    "btnViewOnDueCard": "View detail"
   },
   "Login_Component": {
     "APP_SLOGAN": "This is a Single Page Web that can help your Business grow",
@@ -387,39 +390,40 @@
     }
   },
   "Group_Component": {
-    "placeholderSearchByName":"Search by Name",
-    "labelShowClosedGroups":"Show Closed Groups",
-    "btnBulkImport":"Import Group",
-    "btnCreate":"Create Group",
-    "tableColName":"Name",
-    "tableColAccountNo":"Account #",
-    "tableColExternalId":"ExternalID",
-    "tableColStatus":"Status",
-    "tableColOfficeName":"Office Name",
-    "Create_Group_Component":{
-      "labelName":"name",
-      "labelGroupNameMsgRequired":"Group Name is <strong>required</strong>",
-      "labelGroupNameMsgPattern":"Group Name <strong>cannot</strong> begin with a special character or number",
-      "labelOffice":"Office",
-      "labelGroupOfficeMsgRequired":"Office is <strong>required</strong>",
-      "labelStaff":"Staff",
-      "labelType":"Group Type",
-      "CheckboxActive":"Active",
-      "tableColCartType":"Card Type",
-      "tableColFeeWithDraw":"Fee WithDraw",
-      "tableColFeeRollTerm":"Fee RollTerm",
-      "labelActivationDate":"Activation Date",
-      "labelGroupActivationDateMsgRequired":"Activation Date is <strong>required</strong>",
-      "labelExternal":"External Id",
-      "labelSubmittedOn":"Submitted On",
-      "labelGroupSubmittedOnMsgRequired":"Submission Date is <strong>required</strong>",
-      "labelAddClients":"Add Clients",
-      "tableColName":"Name",
-      "tableColId":"Id",
-      "tableColOfficeName":"Office Name",
-      "labelSelectedClients":"Selected Clients",
-      "btnCancel":"Cancel",
-      "btnSubmit":"Submit"
+    "placeholderSearchByName": "Search by Name",
+    "labelShowClosedGroups": "Show Closed Groups",
+    "btnBulkImport": "Import Group",
+    "btnCreate": "Create Group",
+    "tableColName": "Name",
+    "tableColAccountNo": "Account #",
+    "tableColExternalId": "ExternalID",
+    "tableColStatus": "Status",
+    "tableColOfficeName": "Office Name",
+    "Create_Group_Component": {
+      "labelName": "name",
+      "labelGroupNameMsgRequired": "Group Name is <strong>required</strong>",
+      "labelGroupNameMsgPattern": "Group Name <strong>cannot</strong> begin with a special character or number",
+      "labelOffice": "Office",
+      "labelGroupOfficeMsgRequired": "Office is <strong>required</strong>",
+      "labelStaff": "Staff",
+      "labelType": "Group Type",
+      "CheckboxActive": "Active",
+      "tableColCartType": "Card Type",
+      "tableColFeeWithDraw": "Fee WithDraw",
+      "tableColFeeRollTerm": "Fee RollTerm",
+      "labelActivationDate": "Activation Date",
+      "labelGroupActivationDateMsgRequired": "Activation Date is <strong>required</strong>",
+      "labelExternal": "External Id",
+      "labelSubmittedOn": "Submitted On",
+      "labelGroupSubmittedOnMsgRequired": "Submission Date is <strong>required</strong>",
+      "labelAddClients": "Add Clients",
+      "tableColName": "Name",
+      "tableColId": "Id",
+      "tableColOfficeName": "Office Name",
+      "labelSelectedClients": "Selected Clients",
+      "btnCancel": "Cancel",
+      "btnSubmit": "Submit",
+      "msgCreatedGroup": "Group is created successfully"
     }
   }
 }
