process: form search done

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -442,14 +442,28 @@
       "buttonMore": "More",
       "labelTotalDeposits": "Total Deposits",
       "labelTotalWithdrawls": "Total Withdrawls",
-      "labelPerformanceHistory": "Performance History"
+      "labelPerformanceHistory": "Performance History",
+      "labelInterestEarnedNotPosted": "Interest Earned Not Posted",
+      "labelNominalInterestRate": "Nominal Interest Rate",
+      "labelInterestCompoundingPeriod": "Interest Compounding Period",
+      "labelInterestPostingPeriod": "Interest Posting Period",
+      "labelInterestCalculatedUsing": "Interest Calculated Using",
+      "labelDaysinYear": "Days in Year",
+      "labelLastActiveTransactionDate": "Last Active Transaction Date",
+      "labelSavingsDetails": "Savings Details",
+      "labelActivatedOn": "Activated On",
+      "labelFieldOfficer": "Field Officer",
+      "labelExternalId": "External Id",
+      "labelCurrency": "Currency"
     },
     "Breadcrumb": {
       "labelTransactions": "Transactions",
       "labelSavingsAccountTransactions": "Savings Account Transactions"
     },
     "tabTransactions": {
-      "labelBalance": "Balance"
+      "labelBalance": "Balance",
+      "labelTransactionDateFrom": "Transaction Date From",
+      "labelTransactionDateTo": "Transaction Date To"
     },
     "clientAdvanceCash": {
       "titleClientAdvanceCash": "Advance Cash",
