--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -548,5 +548,62 @@
       "btnCancel": "Hủy",
       "btnSubmit": "Xác nhận"
     }
-  }
+  },
+  "Terminal_Component": {
+    "labelTerminalNameMsgPattern": "Mã Máy POS <strong>KHÔNG</strong> bắt đầu bằng ký tự đặc biệt(!@#$%^&*()_+=<>,.?]*) hoặc số",
+    "labelTerminal":"Máy POS",
+    "btnCreate":"Tạo thông tin máy POS",
+    "labelRequired":"<strong>Bắt bộc</strong>",
+    "labelTerminalMsgPattern":"<strong>Không</strong> Nhập ký tự đặc biệt",
+    "labelFilter":"Bộ lọc",
+    "tableTerminal":{
+      "terminalNo":"Mã máy POS",
+      "terminalCode":"Code máy POS",
+      "terminalName":"Tên POS",
+      "minFeeDefault":"Phí mặc định tối thiểu",
+      "createdBy":"Tài khoản tạo",
+      "createdDate":"Ngày tạo",
+      "updatedDate":"Ngày cập nhật",
+      "status":"Trạng thái"
+    },
+    "FormTerminal":{
+      "labelMsgMin100000": "Giá trị <strong>nhỏ nhất là 100,000</strong>",
+      "labelMsgMin0": "Giá trị <strong>nhỏ nhất là 0</strong>",
+      "labelMsgOutOffMax": "Giá trị <strong>lớn nhất là 100%</strong>",
+      "labelMsgOutOffMin": "Giá trị <strong>nhổ nhất 0%</strong>",
+      "labelRequired":"<strong>Bắt bộc</strong>",
+      "labelEdit":"Chỉnh sửa thông tin máy POS",
+      "labelCreate":"Tạo POS",
+      "labelGeneral":"Cài đặt Phí",
+      "labelTerminalId":"Mã POS",
+      "labelTerminalCode":"Code POS",
+      "labelTerminalName":"Tên POS",
+      "labelLimitPerDay":"Hạn mức số tiền giao dịch trong ngày",
+      "labelMerchantId":"Đối tác",
+      "labelOffice":"Chi nhánh",
+      "labelMinFeeDefault":"Phí tối thiểu mặc định",
+      "checkboxIsActive":"Hoạt động",
+      "labelCostPercentage":"Phí Cost(%)",
+      "labelCogsPercentage":"Phí Cogs(%)",
+      "labelMinPercentage":"Phí thấp nhất(%)",
+      "labelMaxPercentage":"Phí cao nhất(%)",
+      "labelMaxLimitAmount":"Hạn mức máy POS",
+      "labelLevelLimit":"Số lần giao dịch trong ngày",
+      "buttonSetupAll":"Cài đặt chung",
+      "buttonResetDefault":"Hoàn tác",
+      "buttonSubmit":"Khởi tạo",
+      "buttonSubmitUpdate":"Cập nhật",
+      "tableFee":{
+        "Office":"Chi nhánh",
+        "CardType":"Loại thẻ",
+        "FeeCogs":"Phí POS(%)",
+        "FeeCost":"Phí Cost(%)",
+        "FeeMin":"Phí thấp nhất(%)",
+        "FeeMax":"Phí cao nhất(%)",
+        "MaxLimitAmountTransaction":"Hạn mức tối giao dịch",
+        "LevelTransactionCard":"Số lần giao dịch"
+      }
+    }
+  },
+  "labelCurrency":"$"
 }
