Fix some error and refactor bankService
- add log debug to APi and Authen service
- fix file path error in ScSS file
- Load bincode and bank data on the Init stage of app.

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -259,7 +259,9 @@
         "inputUniqueId": "Unique Id",
         "selectBank": "Select bank",
         "selectCardType": "Select card type",
-        "selectStatus": "Status"
+        "selectStatus": "Status",
+        "dialogIdentifierTitle": "Add Client Identifier",
+        "dialogIdentifierTitleExtra": "Add card extra infos"
       },
       "TabGeneral": {
         "lblPerformanceHistory": "Historical Performance",
